[project.scripts]
server = "server.app:main"
name = "exec-inbox-env"
version = "0.1.0"
description = "OpenEnv email inbox environment"
authors = [{name = "Your Name"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
